fix(ui): Refine /latest layout and spacing; remove redundant flexbox wrappers

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -893,8 +893,8 @@ details > summary {
 }
 
 .delta-nodes {
-    float: left;
-    width: 50%;
+    width: 100%;
+    margin-top: 1em;
 }
 
 .subnode .delta-nodes {
